using BackGrid.js to render a list(table) of users

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -5,6 +5,7 @@
 @import url('glyphicon-14.css');
 @import url('docs.css');
 @import url('jquery.fileupload-ui.css');
+@import url('backgrid.css');
 
 
 .img-thumbnail > img {
